--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-B1;2802;0cOrdered by date of first contribution:
+Ordered by date of first contribution:
   Mikhail Andreev (aka adw0rd, http://adw0rd.ru/) <x11org@gmail.com>
