Updated my site address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
 Ordered by date of first contribution:
-  Mikhail Andreev (aka adw0rd, http://adw0rd.ru/) <x11org@gmail.com>
+  Mikhail Andreev (aka adw0rd, http://adw0rd.com/) <x11org@gmail.com>
